--- a/homepage/css/background.css
+++ b/homepage/css/background.css
@@ -1,5 +1,5 @@
 body {
-    background: #f8f8f8;
+    background: #AFC3E4;
     margin: 0;
     font-family: "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
     color: black;
@@ -32,7 +32,9 @@ main .helper span {
 }
 
 .menu {
-    background: #5bc995;
+    background: #444753;
+    font-family: "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
+    color: white;
     height: 100vh;
     width: 240px;
     position: fixed;
